--- a/hw5.Rmd
+++ b/hw5.Rmd
@@ -18,23 +18,82 @@ This dataset https://data.iowa.gov/Sales-Distribution/2019-Iowa-Liquor-Sales/38x
   
   
 ```{r}
+library(dplyr)
+library(tidyverse)
+library(ggplot2)
 liquor <- readr::read_csv("2019_Iowa_Liquor_Sales.csv")
 ```
   
 2. Data cleaning: 
   a. extract geographic latitude and longitude from the variable `Store Location`
 ```{r}
+liquor <- liquor %>% na.omit(cols=`Store Location`)
+liquor$`Store Location` <- substr(liquor$`Store Location`, 8, nchar(liquor$`Store Location`) - 1)
 
-
+liquor <- liquor %>% separate(col=`Store Location`, into=c('Latitude', 'Longitude'), sep=" ")
 ```
   b. make sure the variables are in the correct type, by converting incorrect variable types.
+```{r}
+liquor$Latitude <- as.numeric(unlist(liquor$Latitude))
+liquor$Longitude <- as.numeric(unlist(liquor$Longitude))
+liquor$`Vendor Number` <- as.numeric(unlist(liquor$`Vendor Number`))
+```
   c. extract year, month and day from the variable `Date` as separate columns.
+```{r}
+liquor <- liquor %>% separate('Date', c('Month', 'Day', 'Year'), sep='/')
+
+liquor$Month <- as.numeric(unlist(liquor$Month))
+liquor$Day <- as.numeric(unlist(liquor$Day))
+liquor$Year <- as.numeric(unlist(liquor$Year))
+```
   
 3. First overview:
   a. Plot a scatterplot of lat and long of store locations. 
+```{r}
+liquor %>% ggplot(aes(x=Latitude, y=Longitude)) + geom_point() + 
+  ggtitle("Location of Ames, Iowa Liquor Stores")
+```
+
   b. Provide a visual breakdown of the liquor category (by `Category Name`). Include volume sold in the breakdown.
+```{r}
+#Switch to factor
+liquor$`Category Name` <- as.factor(liquor$`Category Name`)
+
+bar <- liquor %>% ggplot(aes(x=`Category Name`, count=`Volume Sold (Liters)`)) + 
+  geom_bar(position=position_dodge(width = .5)) + coord_flip() + ylab('Volume Sold (Liters)') + 
+  ggtitle("Voume of Alcohol Sold in Each Category")
+
+bar <- bar + theme(axis.text.y = element_text(size=5))
+bar
+```
 4. Find the daily sales liquor sales in Ames in 2019. Summarize the number of sales, volume of liquor sold, and amount of money spent.
+```{r}
+liquor$Date <- paste(liquor$Year, liquor$Month, liquor$Day, sep="-") %>% ymd()
+
+liqSales <- liquor$`Bottles Sold`
+
+days <- liquor %>% group_by(Month, Day)
+
+
+View(days)
+```
 5. Plot volume sold by day (use a scatterplot of volume by day and facet by month). Discover trends with the help of `geom_smooth`. Describe any patterns.
+```{r}
+liquor %>% ggplot(aes(x=Day, y=`Volume Sold (Liters)`)) + geom_point(position = 'jitter') + 
+  geom_smooth() + facet_wrap(~Month) + ggtitle("Volume of Alcohol Sold in Ames in 2019 by Month")
+```
+
+It is hard to tell the trends from the line in this graph, due to the outlier points raising the y-axis scale. However, from what it looks like, from the data that was able to be plotted, it appears that certain days (likely weekends) were hotspots for alcohol sales. These days include early to mid February (likely the Superbowl), and the last weekend before Halloween. 
+
 6. Find the dates for ISU football home games in Fall 2019. Can you see a pattern? 
+```{r}
+#Games: 8/31/19, 9/14/19, 9/21/19, 10/5/19, 10/26/19, 11/16/19, 11/23/19
+
+liquor %>% ggplot(aes(x=Day, y=`Volume Sold (Liters)`)) + geom_smooth() +
+  facet_wrap(~Month) + ggtitle("Volume of Alcohol Sold in Ames in 2019 by Month")
+```
+
+By only plotting the trendlines, it made it easier to see which days had the highest average volume of alcohol sold. It does appear that most of the spikes in late August to November are due to Iowa State home football games. Take, for example, the large spike around September 21, a game in which the Cyclones scored 72 points in a dominant victory. The halloween spike I mentioned earlier was also around a home football game, the homecoming weekend game. 
+
 
 Note: your submission is supposed to be fully reproducible, i.e. the TA and I will 'knit' your submission in RStudio. 
